fixing bug 204162 - -201 error when doing performInstall. r=dveditz sr=jag, a=sspitzer